[package]
name = "etcommon-block"
version = "0.5.1"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Block and transaction types for Ethereum."
repository = "https://github.com/ethereumproject/etcommon-rs"

[lib]
name = "block"

[dependencies]
sha3 = { git = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx" }
etcommon-block-core = { version = "0.3", path = "../block-core" }
etcommon-bigint = { version = "0.2", path = "../bigint" }
etcommon-rlp = { version = "0.2", path = "../rlp" }
etcommon-bloom = { version = "0.2", path = "../bloom" }
etcommon-trie = { version = "0.4", path = "../trie" }

#secp256k1-plus = { version = "0.5", optional = true }
libsecp256k1 = { version = "0.3", git = "https://github.com/mesalock-linux/libsecp256k1-rs-sgx",  optional = true }

sgx_tstd = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dev-dependencies]
#rand = "0.3"
#serde = "1.0"
#serde_derive = "1.0"
#serde_json = "1.0"
#etcommon-hexutil = { version = "0.2", path = "../hexutil" }

[features]
default = ["rust-secp256k1", "mesalock_sgx"]
#c-secp256k1 = ["secp256k1-plus"]
rust-secp256k1 = ["libsecp256k1"]
mesalock_sgx = ["sgx_tstd"]
