[package]
name = "etcommon-bloom"
version = "0.2.1"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Log bloom implementation for Ethereum."
repository = "https://github.com/ethereumproject/etcommon-rs"

[lib]
name = "bloom"

[dependencies]
etcommon-rlp = { version = "0.2", path = "../rlp" }
etcommon-bigint = { version = "0.2", path = "../bigint" }
sha3 = { git = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx" }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dev-dependencies]
etcommon-hexutil = "0.2"

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
