[package]
name = "etcommon-hexutil"
version = "0.2.4"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Hex helper functions."
repository = "https://github.com/ethereumproject/etcommon-rs"
keywords = ["no_std"]

[lib]
name = "hexutil"

[features]
default = ["std", "mesalock_sgx"]
std = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]

[dependencies]
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
