[package]
name = "etcommon-rlp"
description = "Recursive-length prefix encoding, decoding, and compression"
repository = "https://github.com/ethereumproject/etcommon-rs"
license = "MIT/Apache-2.0"
version = "0.2.4"
authors = ["Parity Technologies <admin@parity.io>", "Wei Tang <hi@that.world>"]
keywords = ["no_std"]

[lib]
name = "rlp"

[dependencies]
elastic-array = { git = "https://github.com/mesalock-linux/elastic-array-sgx" }
lazy_static = { version = "1.0", features = ["spin_no_std"] }
byteorder = { git = "https://github.com/mesalock-linux/byteorder-sgx" }
etcommon-hexutil = { version = "0.2", path = "../hexutil" }
sgx_tstd = { rev = "v1.1.1", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[features]
default = ["std", "mesalock_sgx"]
std = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
