[package]
name = "etcommon-trie"
version = "0.4.0"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Lightweight Ethereum world state storage."
repository = "https://github.com/ethereumproject/etcommon-rs"

[lib]
name = "trie"

[dependencies]
etcommon-bigint = { version = "0.2", path = "../bigint" }
etcommon-rlp = { version = "0.2", path = "../rlp" }
sha3 = { git ="https://github.com/mesalock-linux/rustcrypto-hashes-sgx" }
sgx_tstd = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dev-dependencies]
#etcommon-hexutil = "0.2"

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
